# servant-on-heroku

./: .dockerignore  .travis.yml  Dockerfile  LICENSE  Makefile  README.md  servant-on-heroku.cabal  stack.yaml
src/: Lib.hs  Models.hs
