name:                servant-on-heroku
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/cdepillabout/servant-on-heroku
license:             BSD3
license-file:        LICENSE
author:              Dennis Gosnell
maintainer:          cdep.illabout@gmail.com
copyright:           2017 ARoW
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Models
  build-depends:       base >= 4.7 && < 5
                     , monad-control
                     , monad-logger
                     , mtl
                     , natural-transformation
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , read-env-var
                     , servant
                     , servant-server
                     , text
                     , transformers-base
                     , wai
                     , wai-extra
                     , warp
  ghc-options:         -Wall -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction
  default-language:    Haskell2010

executable servant-on-heroku-api
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , servant-on-heroku
  ghc-options:         -Wall -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction
  default-language:    Haskell2010

-- test-suite servant-on-heroku-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , servant-on-heroku
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cdepillabout/servant-on-heroku
